raspi_secure/firewall.rules
# Generated by iptables-save v1.4.21 on Sun Apr 30 12:16:57 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LOGGING - [0:0]
:WLAN_LOGGING - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A INPUT -p tcp -m physdev --physdev-in eth0 -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m physdev --physdev-in eth0 -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m physdev --physdev-in eth0 -m tcp --dport 123 -j ACCEPT
-A INPUT -p udp -m physdev --physdev-in eth0 -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m physdev --physdev-in eth0 -m tcp --dport 137:139 -j ACCEPT
-A INPUT -p udp -m physdev --physdev-in eth0 -m udp --dport 137:139 -j ACCEPT
-A INPUT -p tcp -m physdev --physdev-in eth0 -m tcp --dport 445 -j ACCEPT
-A INPUT -p tcp -m physdev --physdev-in eth0 -m tcp --sport 137:139 -j ACCEPT
-A INPUT -p udp -m physdev --physdev-in eth0 -m udp --sport 137:139 -j ACCEPT
-A INPUT -p tcp -m physdev --physdev-in eth0 -m tcp --sport 445 -j ACCEPT
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.30.252.0/22 -m physdev --physdev-in eth0 -j ACCEPT
-A INPUT -s 151.101.100.133/32 -m physdev --physdev-in eth0 -j ACCEPT
-A INPUT -s 151.101.28.133/32 -m physdev --physdev-in eth0 -j ACCEPT
-A INPUT -d 224.0.0.0/8 -j ACCEPT
-A INPUT -s 224.0.0.0/8 -j ACCEPT
-A INPUT -s 52.43.174.40/32 -j ACCEPT
-A INPUT -s 104.70.153.178/32 -j ACCEPT
-A INPUT -s 104.74.48.110/32 -j ACCEPT
-A INPUT -s 23.7.18.146/32 -j ACCEPT
-A INPUT -s 23.7.24.35/32 -j ACCEPT
-A INPUT -s 52.11.210.152/32 -j ACCEPT
-A INPUT -s 52.25.179.65/32 -j ACCEPT
-A INPUT -s 52.89.56.205/32 -j ACCEPT
-A INPUT -s 54.148.137.96/32 -j ACCEPT
-A INPUT -s 54.218.98.74/32 -j ACCEPT
-A INPUT -s 54.218.99.79/32 -j ACCEPT
-A INPUT -s 54.244.22.201/32 -j ACCEPT
-A INPUT -s 69.25.139.140/32 -j ACCEPT
-A INPUT -s 192.195.204.216/32 -j ACCEPT
-A INPUT -s 52.10.249.207/32 -j ACCEPT
-A INPUT -m physdev --physdev-in wlan0 -j WLAN_LOGGING
-A INPUT -j LOGGING
-A FORWARD -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 224.0.0.0/8 -j ACCEPT
-A FORWARD -s 224.0.0.0/8 -j ACCEPT
-A FORWARD -d 52.43.174.40/32 -j ACCEPT
-A FORWARD -d 104.70.153.178/32 -j ACCEPT
-A FORWARD -d 104.74.48.110/32 -j ACCEPT
-A FORWARD -d 23.7.18.146/32 -j ACCEPT
-A FORWARD -d 23.7.24.35/32 -j ACCEPT
-A FORWARD -d 52.11.210.152/32 -j ACCEPT
-A FORWARD -d 52.25.179.65/32 -j ACCEPT
-A FORWARD -d 52.89.56.205/32 -j ACCEPT
-A FORWARD -d 54.148.137.96/32 -j ACCEPT
-A FORWARD -d 54.218.98.74/32 -j ACCEPT
-A FORWARD -d 54.218.99.79/32 -j ACCEPT
-A FORWARD -d 54.244.22.201/32 -j ACCEPT
-A FORWARD -d 69.25.139.140/32 -j ACCEPT
-A FORWARD -d 192.195.204.216/32 -j ACCEPT
-A FORWARD -d 52.10.249.207/32 -j ACCEPT
-A FORWARD -s 52.43.174.40/32 -j ACCEPT
-A FORWARD -s 104.70.153.178/32 -j ACCEPT
-A FORWARD -s 104.74.48.110/32 -j ACCEPT
-A FORWARD -s 23.7.18.146/32 -j ACCEPT
-A FORWARD -s 23.7.24.35/32 -j ACCEPT
-A FORWARD -s 52.11.210.152/32 -j ACCEPT
-A FORWARD -s 52.25.179.65/32 -j ACCEPT
-A FORWARD -s 52.89.56.205/32 -j ACCEPT
-A FORWARD -s 54.148.137.96/32 -j ACCEPT
-A FORWARD -s 54.218.98.74/32 -j ACCEPT
-A FORWARD -s 54.218.99.79/32 -j ACCEPT
-A FORWARD -s 54.244.22.201/32 -j ACCEPT
-A FORWARD -s 69.25.139.140/32 -j ACCEPT
-A FORWARD -s 192.195.204.216/32 -j ACCEPT
-A FORWARD -s 52.10.249.207/32 -j ACCEPT
-A FORWARD -j LOGGING
-A OUTPUT -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 123 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 137:139 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 137:139 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 445 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 137:139 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 137:139 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 445 -j ACCEPT
-A OUTPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.30.252.0/22 -j ACCEPT
-A OUTPUT -d 151.101.100.133/32 -j ACCEPT
-A OUTPUT -d 151.101.28.133/32 -j ACCEPT
-A OUTPUT -d 224.0.0.0/8 -j ACCEPT
-A OUTPUT -s 224.0.0.0/8 -j ACCEPT
-A OUTPUT -d 52.43.174.40/32 -j ACCEPT
-A OUTPUT -d 104.70.153.178/32 -j ACCEPT
-A OUTPUT -d 104.74.48.110/32 -j ACCEPT
-A OUTPUT -d 23.7.18.146/32 -j ACCEPT
-A OUTPUT -d 23.7.24.35/32 -j ACCEPT
-A OUTPUT -d 52.11.210.152/32 -j ACCEPT
-A OUTPUT -d 52.25.179.65/32 -j ACCEPT
-A OUTPUT -d 52.89.56.205/32 -j ACCEPT
-A OUTPUT -d 54.148.137.96/32 -j ACCEPT
-A OUTPUT -d 54.218.98.74/32 -j ACCEPT
-A OUTPUT -d 54.218.99.79/32 -j ACCEPT
-A OUTPUT -d 54.244.22.201/32 -j ACCEPT
-A OUTPUT -d 69.25.139.140/32 -j ACCEPT
-A OUTPUT -d 192.195.204.216/32 -j ACCEPT
-A OUTPUT -d 52.10.249.207/32 -j ACCEPT
-A OUTPUT -j LOGGING
-A LOGGING -j DROP
-A WLAN_LOGGING -m limit --limit 10/min -j LOG --log-prefix "Dropped incoming wlan packet:"
-A WLAN_LOGGING -j DROP
COMMIT
# Completed on Sun Apr 30 12:16:57 2017
